<resources>
    <string name="app_name">AutoMotion</string>
    <string name="title_activity_main">AutoMotion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_addvehicle">Add New Vehicle</string>
    <string name="title_activity_garage">Garage</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="title_activity_dash_board">AutoMotion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- About -->
    <string name="action_about">About</string>

    <!--Settings-->
    <string name="action_settings">Settings</string>
    <string name="settings_mileage_threshold">Mileage Threshold</string>
    <string name="settings_value">Value</string>

    <!--Garage -->
    <string name="fab_action_search_vin">Search VIN</string>
    <string name="fab_action_search_manual">Manual Entry</string>

    <!--Toast Messages-->
    <string name="toast_vehicle_added">Vehicle Added To Garage</string>
    <string name="toast_vehicle_deleted">Vehicle Deleted From Garage</string>
    <string name="toast_vin_not_found">VIN Not Found</string>

    <!--Button Actions-->
    <string name="button_cancel">CANCEL</string>
    <string name="button_next">NEXT</string>
    <string name="button_back">BACK</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_complete">COMPLETE</string>
    <string name="toast_insufficent_characters">17 Characters Required</string>
    <string name="title_activity_maintenance_schedule">MaintenanceScheduleActivity</string>
    <string name="title_activity_vehicle_specs">VehicleSpecsActivity</string>
    <string name="title_activity_maintenance">MaintenanceActivity</string>

</resources>
